--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ jacocoTestReport {
 
     // QueryDsl QEntity 제외
     def Qdomains = []
-    for(qPattern in "**/QA" .. "**/QZ"){
-        Qdomains.add(qPattern+"*")
+    for (qPattern in "**/QA".."**/QZ") {
+        Qdomains.add(qPattern + "*")
     }
 
     afterEvaluate {
@@ -67,7 +67,6 @@ jacocoTestCoverageVerification {
 }
 
 
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -82,6 +81,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
@@ -106,7 +110,7 @@ tasks.withType(JavaCompile).configureEach {
     options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
 }
 sourceSets {
-    main.java.srcDirs += [ querydslDir ]
+    main.java.srcDirs += [querydslDir]
 }
 
 clean {
